# tabling-helper

./: .gitignore  LICENSE  Makefile  README.md  first.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tables_stractor.py  vite.config.js
.github/workflows/: build.yml
data/: nuevo.json
hooks/: hook-reportlab.graphics.barcode.py
src/: api.js  app.js  config_manager.py  export.py  index.html  main.py  styles.css
src-tauri/: Cargo.toml  Salva1.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  lib.rs  main.rs
