[project]
name = "tabling-helper2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docx2python>=3.6.2",
    "pyinstaller>=6.19.0",
    "weasyprint>=68.1",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.1.0",
]
